<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="soumyadeb.raven.ui.LoginActivity">


    <include layout="@layout/app_bar" android:id="@+id/toolbar"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login with email"
        android:id="@+id/text"
        android:textSize="28sp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/toolbar"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:layout_below="@+id/text"
        >


        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/InputLayout"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:hint="@string/your_email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/login_email"
            android:theme="@style/InputLayout"
            android:layout_marginTop="16dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:hint="@string/password" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/login_password"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorAccent"
            android:padding="18dp"
            android:textColor="@android:color/white"
            android:text="@string/login" />
    </RelativeLayout>

</RelativeLayout>
